rewrote lstset using recurssion. much cleaner and now aligned with recset. other random IDE recommendations on various source files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,16 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.25.0)  # CMake version check
+###### CMAKE INCLUDES
 INCLUDE(CMakePrintHelpers)
 INCLUDE(FetchContent)
 INCLUDE(ExternalProject)
+###### CMAKE CPACK INCLUDE
 SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/${CPACK_PACKAGE_NAME}/${CMAKE_PROJECT_VERSION}")
 SET(CPACK_SET_DESTDIR ${CMAKE_BINARY_DIR})
 INCLUDE(CPack)
 
-
-PROJECT(fhatos)
+######## The fHatTy #########
+PROJECT(fhatos) #############
+#############################
 
 ##############################################
 ############ RELEASE DEFINITIONS #############
@@ -59,20 +62,11 @@ MESSAGE("${.r}            PhaseShift Studio Presents \n"
 ####################################################################################################################
 ####################################################################################################################
 
-###################
-
-SET(no-dev) # remove mqtt-c warning for developers of mqtt-c
-
-#SET(CMAKE_C_COMPILER /usr/bin/gcc)
-#SET(CMAKE_CXX_COMPILER /usr/bin/g++)
-#SET(CMAKE_SYSTEM_NAME Linux)
-#SET(CMAKE_C_COMPILER   i586-mingw32msvc-gcc)
-#SET(CMAKE_CXX_COMPILER i586-mingw32msvc-g++)
-
 ####################################################################
 ####################### DEFAULT SETTINGS ###########################
 MESSAGE(CHECK_START "${.y}setting default values${..}")
 ####################################################################
+SET(no-dev) # remove mqtt-c warning for developers of mqtt-c
 IF(NOT EXISTS CMAKE_BUILD_TYPE)
     SET(CMAKE_BUILD_TYPE DEBUG)
 ENDIF()
@@ -255,9 +249,9 @@ IF(CHECK_INTERNET)
 ELSE()
     SET(FETCHCONTENT_FULLY_DISCONNECTED OFF)
 ENDIF()
-########################################################################################################################
-########################################################################################################################
-########################################################################################################################
+#############################################################################################################
+#############################################################################################################
+#############################################################################################################
 ######## PROJECT LIBRARY (NATIVE)
 OPTION(BUILD_NATIVE "build native" ON) # ON/OFF
 IF(BUILD_NATIVE)
@@ -305,9 +299,9 @@ IF(BUILD_NATIVE)
     INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
     MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ENDIF()
-########################################################################################################################
-########################################################################################################################
-########################################################################################################################
+##############################################################################################################
+##############################################################################################################
+##############################################################################################################
 
 ####################################
 ######## EXTERNAL LIBRARIES ########
