tweaked build environment for better control of parallel builds and opitmization levels -- necessary to have fine grained control when building on embedded linux systems given the resource contraints.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,15 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.25.0)  # CMake version check
 INCLUDE(CMakePrintHelpers)
 INCLUDE(FetchContent)
 INCLUDE(ExternalProject)
-###### CMAKE CPACK INCLUDE
-SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/${CPACK_PACKAGE_NAME}/${CMAKE_PROJECT_VERSION}")
-SET(CPACK_SET_DESTDIR ${CMAKE_BINARY_DIR})
-INCLUDE(CPack)
+###### CMAKE CPACK INCLUDE ######
+STRING(COMPARE EQUAL "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}" is_top_level)
+OPTION(TOP_LEVEL_INCLUDE_PACKAGING "include project packaging rules" "${is_top_level}")
+IF(TOP_LEVEL_INCLUDE_PACKAGING)
+    SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/${CPACK_PACKAGE_NAME}/${CMAKE_PROJECT_VERSION}")
+    SET(CPACK_SET_DESTDIR ${CMAKE_BINARY_DIR})
+    INCLUDE(CPack)
+ENDIF()
+#################################
 
 ######## The fHatTy #########
 PROJECT(fhatos) #############
@@ -67,19 +72,19 @@ MESSAGE("${.r}            PhaseShift Studio Presents \n"
 MESSAGE(CHECK_START "${.y}setting default values${..}")
 ####################################################################
 SET(no-dev) # remove mqtt-c warning for developers of mqtt-c
-IF(NOT EXISTS CMAKE_BUILD_TYPE)
+IF(NOT DEFINED CMAKE_BUILD_TYPE)
     SET(CMAKE_BUILD_TYPE DEBUG)
 ENDIF()
 #########################################
-IF(NOT EXISTS CMAKE_BINARY_DIR)
+IF(NOT DEFINED CMAKE_BINARY_DIR)
     SET(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
 ENDIF()
 #########################################
-IF(NOT EXISTS CMAKE_BUILD_PARALLEL_LEVEL)
+IF(NOT DEFINED CMAKE_BUILD_PARALLEL_LEVEL)
     SET(CMAKE_BUILD_PARALLEL_LEVEL 8)
 ENDIF()
 #########################################
-IF(NOT EXISTS FOS_SHOW_GIT_PROGRESS)
+IF(NOT DEFINED FOS_SHOW_GIT_PROGRESS)
     SET(FOS_SHOW_GIT_PROGRESS ON)
 ENDIF()
 #########################################
@@ -150,25 +155,29 @@ MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ####################### CPACK PACKAGING ############################
 ####################################################################
 MESSAGE(CHECK_START "${.y}configuring packaging with cpack${..}")
-SET(CPACK_PACKAGE_NAME ${PROJECT_NAME})
-SET(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
-SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/${CPACK_PACKAGE_NAME}/${CMAKE_PROJECT_VERSION}")
-SET(CPACK_SET_DESTDIR ${CMAKE_BINARY_DIR})
-SET(CPACK_GENERATOR DEB)
-SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "FhatOS Distributed Operating System")
-SET(CPACK_PACKAGE_VENDOR "fhatos.org")
-SET(CPACK_PACKAGE_CONTACT "dogturd.stynx@fhatos.org")
-SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Dr. Stynx")
-SET(CPACK_VERBATIM_VARIABLES ON)
-SET(CPACK_PACKAGE_INSTALL_DIRECTORY ${CMAKE_BINARY_DIR})
-SET(CPACK_OUTPUT_FILE_PREFIX ${CMAKE_BINARY_DIR})
-SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION})
-SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION})
-SET(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION})
-SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
-SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.md")
-SET(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
+IF(TOP_LEVEL_INCLUDE_PACKAGING)
+    SET(CPACK_PACKAGE_NAME ${PROJECT_NAME})
+    SET(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
+    SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/${CPACK_PACKAGE_NAME}/${CMAKE_PROJECT_VERSION}")
+    SET(CPACK_SET_DESTDIR ${CMAKE_BINARY_DIR})
+    SET(CPACK_GENERATOR DEB)
+    SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+    SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "FhatOS Distributed Operating System")
+    SET(CPACK_PACKAGE_VENDOR "fhatos.org")
+    SET(CPACK_PACKAGE_CONTACT "dogturd.stynx@fhatos.org")
+    SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Dr. Stynx")
+    SET(CPACK_VERBATIM_VARIABLES ON)
+    SET(CPACK_PACKAGE_INSTALL_DIRECTORY ${CMAKE_BINARY_DIR})
+    SET(CPACK_OUTPUT_FILE_PREFIX ${CMAKE_BINARY_DIR})
+    SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION})
+    SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION})
+    SET(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION})
+    SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
+    SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.md")
+    SET(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
+ELSE()
+    MESSAGE(NOTICE "${PROJECT_NAME} is not the ${.r}top level project${..}. Using enclosing project's ${.y}CPack${..} configurations.")
+ENDIF()
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ####################################################################
 SET(FOS_MACHINE_SUBOS ${CMAKE_SYSTEM})
