finally fixed the type loading issue. it was in cmake and how you construct the executable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -274,11 +274,11 @@ IF(BUILD_NATIVE)
         SET(CMAKE_CXX_COMPILER_LAUNCHER ccache)
     ENDIF()
     INCLUDE_DIRECTORIES(src)
-    FILE(GLOB_RECURSE SOURCE_FILES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp" "src/*.hpp")
-    IF(VERBOSE)
-        MESSAGE(NOTICE "${.g}adding source files${..}: ${SOURCE_FILES}")
-    ENDIF()
-    ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
+    #FILE(GLOB_RECURSE SOURCE_FILES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp" "src/*.hpp")
+    #IF(VERBOSE)
+    #    MESSAGE(NOTICE "${.g}adding source files${..}: ${SOURCE_FILES}")
+    #ENDIF()
+    ADD_EXECUTABLE(${PROJECT_NAME} src/main.cpp)
     SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
             ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
             LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
