--- a/.wifi-template.ini
+++ b/.wifi-template.ini
@@ -6,3 +6,7 @@ build_flags =
         -DWIFI_PASS=password1:password2:password3:...
         -DMQTT_BROKER_ADDR=localhost:1883
         -DMQTT_BROKER_PORT=1833
+
+
+ [ ./config/ssid => [ssid1, ssid2, ...],
+  ./config/pass => [password1, password2, ..]]
