--- a/platformio.ini
+++ b/platformio.ini
@@ -79,7 +79,7 @@ build_flags =
     -std=gnu++2a
     -DCONFIG_COMPILER_CXX_STANDARD=gnu++2a
     ${wifi.build_flags}
-    -Ibuild/_deps/ordered_map-src/include/
+    #-Ibuild/_deps/ordered_map-src/include/
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
     -DUNITY_OUTPUT_COLOR
     -DUNITY_INCLUDE_PRINT_FORMATTED
