have new Compiler class doing type checking on inst. No more global TYPE_CHECK function needed. headerless codebase was, unfortunately, the way to go.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,10 @@ FILE(GLOB_RECURSE HEADERS "${CMAKE_SOURCE_DIR}/src" "*.hpp")
 MESSAGE(STATUS "${.y}adding header files${..}: ${.g}${HEADERS}${..}")
 #####################################################################################
 INCLUDE("${PROJECT_SOURCE_DIR}/cmake/fhatos_functions.cmake")
-ADD_LIBRARY(${PROJECT_NAME}-lib ${SOURCES} ${HEADERS})
+SET(MAIN_LESS_SOURCES ${SOURCES})
+LIST(REMOVE_ITEM MAIN_LESS_SOURCES "${CMAKE_SOURCE_DIR}/src/main.cpp")
+ADD_LIBRARY(${PROJECT_NAME}-lib ${MAIN_LESS_SOURCES} ${HEADERS})
+
 CREATE_TARGET(${PROJECT_NAME}-lib)
 SOURCE_GROUP(${PROJECT_NAME}-lib FILES ${SOURCES} ${HEADERS})
 #####################################################################################
