added python build script to exclude native source when compiling for microprocessors. furi.retract is component spacer aware.

--- a/platformio.ini
+++ b/platformio.ini
@@ -169,6 +169,7 @@ board_build.filesystem = littlefs
 test_framework = unity
 extra_scripts =
     pre:scripts/environment.py
+    pre:scripts/exclude_native_source.py
 # pre:scripts/fs_mount.py
 lib_deps =
     WiFi
