figured out how to get stack trace information out of ESP32s. This has been a 3 day journey that has paid off big time. So much easier to debug these chips now with a stack trace and source code line number... wow. night and day. fixed various discovered heap corruption issues that have now been rectified.

--- a/platformio.ini
+++ b/platformio.ini
@@ -95,18 +95,22 @@ platform = espressif32
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
 monitor_speed = ${common.monitor_speed}
+monitor_dir = scripts
 monitor_filters =
     ${env.monitor_filters}
     esp32_exception_decoder
 lib_ignore =
     ESP8266Scheduler
+test_build_src = yes
 test_ignore =
     test_main
+    test_basic
     structure/test_furi_boost
     structure/stype/mqtt/test_mqtt
     model/test_fs
 build_src_filter =
     +<**/*>
+    -<test/test_basic.cpp>
     -<test/structure/test_furi_boost.cpp>
 build_unflags =
     #-fno-rtti
@@ -207,11 +211,7 @@ stack_size = 4096
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-    ${bluetooth.build_flags}
-######## S3-PRO SPECIFIC #########
-    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=${this.stack_size}
-    -DconfigMINIMAL_STACK_SIZE=${this.stack_size}
-    -DSET_LOOP_TASK_STACK_SIZE=${this.stack_size}
+    #${bluetooth.build_flags}
 
 ###########################################
 ###########################################
